# Utils

BaseClient/: CMakeLists.txt  main.cpp
BaseClient/src/: IBuffer.h  NetworkBuffer.cpp  NetworkBuffer.h  Protocol.h  Socket.cpp  Socket.h
BaseServer/: CMakeLists.txt  Client.h  main.cpp
BaseServer/src/: Client.cpp  Client.h  NetworkManager.cpp  NetworkManager.h  Server.cpp  Server.h  main.cpp
BaseServer/src/Network/: Client.cpp  Client.h  IMultiplexer.h  NetworkManager.cpp  NetworkManager.h  Select.cpp  Select.h
